--- a/DevelopingDataProducts.Rmd
+++ b/DevelopingDataProducts.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Developing Data Products"
 author: "Kaazal"
-date: "17 February 2019"
+date: "18 February 2019"
 output:
   slidy_presentation: default
   ioslides_presentation: default
@@ -11,20 +11,16 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-## STORMDATA
+## Shiny App - STORMDATA 
 
 SYNOPSIS : Storms and other severe weather events can cause both public health and economic problems for communities and municipalities. Many severe events can result in fatalities, injuries, and property damage, and preventing such outcomes to the extent
 possible is a key concern.
 
 This project involves exploring the U.S. National Oceanic and Atmospheric Administration's (NOAA) storm database. This database tracks characteristics of major storms and weather events in the United States, including when and where they occur, as well as estimates of any fatalities, injuries, and property damage.
 
-
-
-## Shiny App
-
 1. This shiny app explores US NATIONAL STORM DATA
 2. User Chooses different impact targets
-3. Displayds plots depicting most severe waether events
+3. Displays plots depicting most severe weather events
 
 
 ## Data processig
@@ -39,7 +35,32 @@ This app uses filtered and analysed data from the dataset of US NOAA (national o
 	1. Analysed stormdata is taken and used in this shiny app
 	2. As the output, the plots are displayed according to the radiobuttons
 
+## R Code	
+      Stormdata <- 
+      subset(storm[c ("EVTYPE","FATALITIES","INJURIES","PROPDMG","PROPDMGEXP","CROPDMG","CROPDMGEXP")])
+      
+      TotalFATALITIES <- aggregate(FATALITIES ~ EVTYPE, storm,sum)
+      TopFATALITIES <- TotalFATALITIES[order(TotalFATALITIES$FATALITIES,decreasing=TRUE), ]
+      Top10FATALITIES <- head(arrange(TopFATALITIES,desc(FATALITIES)), n = 10)
+      Top10FATALITIES <- mutate(Top10FATALITIES,Rank = seq(1:10))
+      FATALITIES_g <- ggplot(Top10FATALITIES,aes(EVTYPE,FATALITIES,fill=EVTYPE))
+      
+      TotalINJURIES <- aggregate(INJURIES ~ EVTYPE,storm,sum)
+      TopINJURIES <- TotalINJURIES[order(TotalINJURIES$INJURIES,decreasing = TRUE), ]
+      Top10INJURIES <- head(arrange(TopINJURIES,desc(INJURIES)), n = 10)
+      Top10INJURIES <- mutate(Top10INJURIES,Rank = seq(1:10))
+      INJURIES_g <- ggplot(Top10INJURIES,aes(EVTYPE,INJURIES,fill=EVTYPE))
+      
+      TotalECONOMICCONSEQ <- aggregate(PROPDMGEXPCONSEQ ~ EVTYPE, Stormdata,sum)
+      TopECONOMICCONSEQ <- TotalECONOMICCONSEQ[order(TotalECONOMICCONSEQ$PROPDMG,decreasing=TRUE), ]
+      Top10ECONOMICCONSEQ <- head(arrange(TopECONOMICCONSEQ,desc(PROPDMGEXPCONSEQ)), n = 10)
+      Top10ECONOMICCONSEQ <- mutate(Top10ECONOMICCONSEQ,Rank = seq(1:10))
+      ECONOMIC_g <- ggplot(Top10ECONOMICCONSEQ,aes(EVTYPE,PROPDMGEXPCONSEQ,fill=EVTYPE))
 
-## Visit below URL for the Shiny App.
+## Visit below - URLs for Shiny App and Git Hub.
 
 https://kaazal.shinyapps.io/StormProduct/
+
+
+https://github.com/kaazal/DevelopingDataProducts
+
